# lobsterdata

./: .env.example  .gitignore  LICENSE  README.md  format.sh  publish.sh  pyproject.toml  run_tests.sh
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
dev-docs/: dev-environment-setup.md
examples/: README.md  bulk_request.py  cli.py  client_basic_usage.py  nasdaq_100.csv
src/lobsterdata/: __init__.py  client.py
tests/: README.md  conftest.py  test_client.py  test_examples.py
