[project]
name = "lobsterdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruihong Huang", email = "ruihong.huang@lobsterdata.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
lobsterdata = "lobsterdata:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "pytest>=9.0.2",
]
