[project]
name = "lobsterdata"
version = "0.1.1"
description = "Python client for the LOBSTER financial data API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ruihong Huang", email = "ruihong.huang@lobsterdata.com" }
]
keywords = ["lobster", "finance", "order book", "market data", "nasdaq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
examples = [
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://lobsterdata.com"
Repository = "https://github.com/rhuang10/lobsterdata"
"Bug Tracker" = "https://github.com/rhuang10/lobsterdata/issues"

[project.scripts]
lobsterdata = "lobsterdata:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.0",
    "ruff>=0.9",
    "twine>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
src_paths = ["src", "examples"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors/warnings, pyflakes, isort
